<resources>
    <string name="app_name">Kawach</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_username">Username</string>
    <string name="labl_password">Password</string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_no_account">New Signup?</string>
    <string name="lbl_register_now">Register Now</string>
    <string name="alert_empty_username">Please Enter UserName</string>
    <string name="alret_empty_password">Please Enter Password</string>
    <string name="lbl_reg_email">Email ID</string>
    <string name="lbl_reg_mr">Mr</string>
    <string name="lbl_reg_fname">First Name</string>
    <string name="lbl_reg_mname">Middle Name</string>
    <string name="lbl_reg_lname">Last Name</string>
    <string name="lbl_reg_addr1">Address Line 1</string>
    <string name="lbl_reg_addr2">Address Line 2</string>
    <string name="lbl_reg_area">Area</string>
    <string name="lbl_reg_city">City</string>
    <string name="lbl_reg_pincode">Pincode</string>
    <string name="lbl_reg_distirct">Distirct</string>
    <string name="lbl_reg_state">State</string>
    <string name="lbl_reg_landline">Landline</string>
    <string name="lbl_reg_mobile">Mobile</string>
    <string name="lbl_reg_birthdate">BirthDate</string>
    <string name="lbl_reg_female">Female</string>
    <string name="lbl_reg_male">Male</string>
    <string name="lbl_reg_gender">Gender :</string>
    <string name="alret_empty_email">Please enter email address</string>
    <string name="lbl_change_new_password">New Password</string>
    <string name="fragnent_changepassword_change_password">Change Password</string>
    <string name="fragnent_changepassword_confirm_password">Confirm Password</string>
    <string name="fragnent_changepassword_old_password">Old Password</string>
    <string name="lbl_fp_email">EmailAddress</string>
    <string name="lbl_fp_forgot_password">Forgot Password</string>
    <string name="alret_valid_email">Please enter valid Email Address</string>
    <string name="alert_empty_prefix">Please enter Prefix</string>
    <string name="alert_empty_fname">Please enter FirstName</string>
    <string name="alert_empty_mname">Please enter MiddleName</string>
    <string name="alert_empty_lname">Please enter LastName</string>
    <string name="alert_empty_addr1">Please enter AddressLine1</string>
    <string name="alert_empty_area">Please enter Area</string>
    <string name="alert_empty_city">Please enter City</string>
    <string name="alert_empty_pincode">Please enter Pincode</string>
    <string name="alert_empty_district">Please enter District</string>
    <string name="alert_empty_state">Please enter State</string>
    <string name="alert_empty_landline">Please enter LandLine</string>
    <string name="alert_empty_mobile">Please enter Mobile</string>
    <string name="alert_empty_birthday">Please enter Birthday</string>
    <string name="lbl_setting_choose_password"><u>Change Password</u></string>
    <string name="lbl_title_changepassword">Change Password</string>
    <string name="lbl_title_dashboard">Dashboard</string>
    <string name="lbl_title_forgotpass">Forgot Password</string>
    <string name="lbl_title_login">Login</string>
    <string name="lbl_title_register">Register</string>
    <string name="lbl_title_settings">Settings</string>
    <string name="lbl_contactlist"><u>ContactList</u></string>
    <string name="alert_permision_callphone">Call Phone permision is needed</string>
    <string name="alret_internet">Please check internet connection</string>
    <string name="alert_login_failed">authentication failed</string>
    <string name="alert_register_fail">Registration failed</string>
    <string name="alert_sos_success">SOS send Successfully</string>
    <string name="alert_sos_failed">Failed to send SOS</string>
    <string name="alert_change_pass_success">Change Password successfully</string>
    <string name="alert_change_password_failed">Failed to Change Password</string>
    <string name="alret_fp_success">NewPassword is send to your email address</string>
    <string name="alert_fp_fail">Fail to Forgot Password</string>
    <string name="alret_permision_need">Permission are needed to perform action</string>
    <string name="lbl_setting_english">English</string>
    <string name="lbl_setting_hindi">Hindi</string>
    <string name="lbl_setting_gujarati">Gujarati</string>
    <string name="lbl_pre_mr">Mr</string>
    <string name="lbl_reg_miss">Miss</string>
    <string name="lbl_reg_mrs">Mrs</string>
    <string name="lbl_reg_prefix">Select Prefix</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_reg_landmark">Landmark</string>
    <string name="alert_fileupload_success">File Upload Successfully</string>
    <string name="alert_fileupload_failed">File Upload Failed</string>
    <string name="lbl_login_login">Login</string>
    <string name="lbl_reg_register">Register</string>
    <string name="lbl_choose_language">Choose Language</string>

    <!--later entry-->
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="alert_video_problem">Prolem when saving video data, please try again</string>
    <string name="alert_camera_not_support">Camera service not available</string>

    <string name="x_mbs">%1$sMB</string>
    <string name="x_kbs">%1$sKB</string>
</resources>
