<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_page_v_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp">

        <app.sosdemo.common.CustomEditText
            android:id="@+id/fragnent_changepassword_et_newpass"
            style="@style/editext_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/lbl_change_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"></app.sosdemo.common.CustomEditText>

        <app.sosdemo.common.CustomEditText
            android:id="@+id/fragnent_changepassword_et_oldpass"
            style="@style/editext_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/fragnent_changepassword_old_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword">

        </app.sosdemo.common.CustomEditText>

        <app.sosdemo.common.CustomEditText
            android:id="@+id/fragnent_changepassword_et_confirm"
            style="@style/editext_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/fragnent_changepassword_confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"></app.sosdemo.common.CustomEditText>

        <app.sosdemo.common.CustomButton
            android:id="@+id/fragnent_changepassword_btn_submit"
            style="@style/button_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/fragnent_changepassword_change_password" />
    </LinearLayout>
</LinearLayout>